--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Blog
-author: "ORÉAL CHIMI"
+author: ORÉAL CHIMI
 email: chimishaquille@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   block posts for the new comers, here you are all welcomed.
